<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Colors -->
    <color name="orange_background">#ffb50b</color>
    <color name="white">#ffffff</color>
    <color name="dark_text">#000000</color>
    <color name="light_text_background">#FFFFFF</color>
    <color name="light_gray_field">#F2F2F2</color>
    <color name="button">#0071BC</color>

    <string name="app_name">Production Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_run">RunActivity</string>
    <string name="add_run">Add a Run</string>
    <string name="enter_textile_name">Enter Textile Name</string>
    <string name="save">Save</string>
    <string name="initial_configuration">Log In</string>
    <string name="username">Username</string>
    <string name="continue_desc">Continue</string>
    <string name="big_logo_desc">Production Tracker logo</string>

    <!-- Welcome page -->
    <string name="version_number">Version 0.5</string>
    <string name="urban_launchpad_desc">Urban Launchpad</string>
    
    <!-- iniconfig page -->
    <string name="username_button_Text">Login</string>
    <string name="usernameText">Select user</string>
    
    <!-- Runs list element -->
    <string name="run_no_info">Run number - No info</string>
    <string name="textile_no_info">Textile - No info</string>
    <string name="last_step_no_info">Last step - No info</string>
    <string name="run_continue_button_desc">Continue to this run’s information page</string>
    
    <!-- Step list element -->
    <string name="step_no_info">Step - No info</string>
    <string name="time_completed_no_info">Completed - No info</string>
    <string name="update_button_desc">Button to update information of a step</string>
    <string name="update_button_text">Update</string>
    
    <!-- add New step activity -->
    <string name="enter_step_name">Enter step name</string>
    <!-- Probably will be used -->
    <string name="invalid_user_project">invalid_user_project</string>
    <string name="select_user_first">select_user_first</string>

    <!-- Probably wont be used -->
    <string name="survey_parsed">Survey parsed</string>
    <string name="no_survey_obtained">no_survey_obtained</string>
    <string name="select_project">select_project</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="projectNameText">Select project</string>
    <string name="projectName">Project name</string>
    <string name="projectNameButtonDesc">Project name</string>

    <!-- Will have to be changed -->
    <string name="textile_description">Textile Image</string>
    <string name="title_activity_steps">StepsActivity</string>

</resources>