<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_field"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Iniconfig" >

    <ImageView
        android:id="@+id/app_big_icon_button"
        style="@style/No_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:background="@color/orange_background"
        android:contentDescription="@string/big_logo_desc"
        android:padding="40dp"
        android:src="@drawable/logo_big" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="@color/orange_background"
        android:fontFamily="sans-serif-bold"
        android:gravity="center"
        android:maxLines="2"
        android:padding="15dp"
        android:singleLine="false"
        android:text="@string/app_name"
        android:textColor="@color/dark_text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="@color/orange_background"
        android:fontFamily="sans-serif-bold"
        android:gravity="center"
        android:maxLines="2"
        android:padding="15dp"
        android:singleLine="false"
        android:text="@string/version_number"
        android:textColor="@color/dark_text"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_margin="15dp"
        android:background="@color/light_text_background"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="10dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/usernameText"
        android:textColor="@color/dark_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/button"
        android:contentDescription="@string/username_button_Text"
        android:gravity="center"
        android:src="@drawable/add_user"
        android:text="@string/username_button_Text" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:padding="0dp" >

        <RelativeLayout
            android:id="@+id/iniconfig_navbar"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="20dp"
                android:paddingRight="10dp" >

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <ImageView
                    android:id="@+id/bcontinue"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/continue_desc"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:src="@drawable/continue_button" />
            </TableRow>
        </RelativeLayout>
    </TableLayout>

</LinearLayout>